# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/fixed
# [V] version change
# ====================================================================


# 2017-02-14
# --------------------------------------------------------------------
# ~ cleaned up some code in funcs40.py
# + added edep and lsveto cuts to MC selection


# 2017-02-13
# --------------------------------------------------------------------
# + added lsveto cuts to the data selection
# + added ncluster cuts to data selection - not much difference from
#   the edep cuts
# ~ revamped the sigle/multi hit TCut making in funcs40.py
# + fix for lsveto MC rootfile selection - my code was also selecting
#   lsvetoair rootfiles - this is now fixed - no big impact on anything
# ~ checked merged data files against normal files and output was the same
# + added paths in funcs40.py to use the Vxx-xx-xx_MERGED rootfiles for data


# 2017-02-09
# --------------------------------------------------------------------
# + finally fixed the bug with the single/multi hit selection criteria
#   It was because the primVolumeName cut was messing stuff up.


# 2017-02-06
# --------------------------------------------------------------------
# + add TCut('1') for simulation as default setting,
#   it works! (no more if-else)
# + add TCut('1') for data as default setting,
#   it works! (no more if-else)
# + added simple data cuts for 'all-hits', 'single-hits', and 'multi-hits'
# + added option 'chan' to force a type of data selection


# 2017-02-02
# --------------------------------------------------------------------
# ~ add new rootfile names to backgrounds40
# ~ generated the new build40 MC rootfiles


# 2017-02-01
# --------------------------------------------------------------------
# ~ backgrounds40.txt now uses V00.02.03 data
# ~ move to V00.02.03 processing of the 1546 data